--- a/sugestoes.html
+++ b/sugestoes.html
@@ -5,7 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🎁 Presentes Pro Pai - Present Finder</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="js/produtos.js"></script>
+    <script src="js/render.js"></script>
 </head>
+
+
+
+
 <body class="bg-gradient-to-b from-red-500 to-red-700 min-h-screen text-white p-4">
         
     <div class="bg-black/80 p-3 -mx-4 -mt-4 mb-6 text-center">
