--- a/sugestoes.html
+++ b/sugestoes.html
@@ -12,15 +12,16 @@
     </div>
 
     <div class="container mx-auto max-w-3xl">
+        <!-- Header -->
         <div class="text-center mb-8">
-            <h1 class="text-4xl font-bold mb-4"></h1>
-            <p class="text-xl mb-4"></p>
+            <h1 id="titulo" class="text-4xl font-bold mb-4"></h1>
+            <p id="subtitulo" class="text-xl mb-4"></p>
             
             <div class="bg-white/20 p-4 rounded-lg">
                 <p class="text-xl mb-2">Selecionamos especialmente para:</p>
-                <p class="font-bold"></p>
-                <p class="font-bold"></p>
-                <p class="font-bold"></p>
+                <p id="categoria" class="font-bold"></p>
+                <p id="faixa" class="font-bold"></p>
+                <p id="foco" class="font-bold"></p>
             </div>
 
             <div class="grid grid-cols-2 gap-4 mt-4">
@@ -33,16 +34,17 @@
             </div>
         </div>
 
+        <!-- Produto Principal -->
         <div class="bg-white rounded-lg p-6 shadow-lg mb-6">
             <div class="text-black">
-                <div class="flex items-center gap-6 mb-6">
+                <div id="produto-principal" class="flex items-center gap-6 mb-6">
                     <div class="w-1/3 max-w-sm">
-                        <img src="" alt="Produto Principal" class="w-full rounded-lg shadow-md">
+                        <img id="produto-imagem" src="" alt="" class="w-full rounded-lg shadow-md">
                     </div>
                     
                     <div class="w-2/3 space-y-4">
-                        <h2 class="text-3xl font-bold leading-tight"></h2>
-                        <div class="space-y-2"></div>
+                        <h2 id="produto-nome" class="text-3xl font-bold leading-tight"></h2>
+                        <div id="produto-reviews" class="space-y-2"></div>
                         <div class="flex gap-4">
                             <span class="bg-green-500 text-white px-4 py-2 rounded-full text-sm font-semibold">Mais Vendido</span>
                             <span class="bg-yellow-500 text-white px-4 py-2 rounded-full text-sm font-semibold">-45% OFF</span>
@@ -50,43 +52,49 @@
                     </div>
                 </div>
 
+                <!-- Review Destaque -->
                 <div class="bg-gray-50 p-4 rounded-lg mb-4">
                     <h3 class="font-bold mb-3">O que dizem os clientes:</h3>
-                    <div class="space-y-3">
+                    <div id="review-destaque" class="space-y-3">
                         <div class="flex items-start gap-3">
-                            <div class="bg-blue-100 rounded-full p-2">
+                            <div id="review-autor-iniciais" class="bg-blue-100 rounded-full p-2">
                                 <span class="font-bold">JC</span>
                             </div>
                             <div>
                                 <div class="flex items-center">
                                     <span class="text-yellow-400">★★★★★</span>
-                                    <span class="ml-2 font-bold">João Carlos</span>
+                                    <span id="review-autor" class="ml-2 font-bold"></span>
                                     <span class="ml-2 text-gray-500">· Compra verificada</span>
                                 </div>
-                                <p class="text-gray-600"></p>
+                                <p id="review-texto" class="text-gray-600"></p>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="space-y-3 mb-6"></div>
+                <!-- Preços -->
+                <div id="precos-container" class="space-y-3 mb-6"></div>
 
+                <!-- Benefícios -->
                 <div class="bg-gray-50 p-4 rounded-lg mt-4">
                     <h3 class="font-bold mb-2">Por que esse presente é PERFEITO?</h3>
-                    <ul class="list-disc pl-5 text-gray-600"></ul>
+                    <ul id="beneficios" class="list-disc pl-5 text-gray-600"></ul>
                 </div>
             </div>
         </div>
 
+        <!-- Timer -->
         <div class="bg-black/40 rounded-lg p-4 mb-8 text-center">
             <p class="text-yellow-300 text-sm mb-1">⚡ PROMOÇÃO RELÂMPAGO</p>
-            <p class="text-2xl font-bold" id="timer">Ofertas expiram em: 02:45:33</p>
+            <p id="timer" class="text-2xl font-bold">Ofertas expiram em: 02:45:33</p>
             <p class="text-sm mt-1">Preços podem aumentar a qualquer momento!</p>
         </div>
 
-        <div class="grid grid-cols-2 gap-4 mb-20"></div>
+        <!-- Sugestões -->
+        <div id="sugestoes-container" class="grid grid-cols-2 gap-4 mb-20"></div>
     </div>
 
+    <!-- Footer -->
     <div class="fixed bottom-0 left-0 right-0 bg-black/90 text-white py-3 text-center">
         <p class="text-sm">⚡ Últimas 3 unidades com frete grátis!</p>
         <p class="font-bold">Economia total possível: R$ 157,80</p>
