atualizado footer com links para termos de uso etc

--- a/index.html
+++ b/index.html
@@ -248,10 +248,10 @@
                     <label class="block text-xl font-bold text-gray-800">Quanto quer gastar?</label>
                     <select name="orcamento" class="w-full p-3 rounded-lg bg-white border border-gray-300 text-gray-800" required>
                         <option value="">Escolha uma opção...</option>
-                        <option value="100">Até R$100</option>
-                        <option value="200">Até R$200</option>
-                        <option value="300">Até R$300</option>
-                        <option value="500">Até R$500</option>
+                        <option value="100">Até R$50</option>
+                        <option value="200">Até R$100</option>
+                        <option value="300">Até R$200</option>
+                        <option value="500">Até R$300</option>
                     </select>
                 </div>
 
@@ -371,8 +371,8 @@
                 <div>
                     <h3 class="font-bold mb-4">Links Úteis</h3>
                     <ul class="space-y-2 text-sm text-gray-400">
-                        <li><a href="politica-privacidade.html" class="hover:text-white">Política de Privacidade</a></li>
-                        <li><a href="termos-de-uso.html" class="hover:text-white">Termos de Uso</a></li>
+                        <li><a href="/presente-perfeito/politica-de-privacidade.html" class="hover:text-white">Política de Privacidade</a></li>
+                        <li><a href="/presente-perfeito/termos-de-uso.html" class="hover:text-white">Termos de Uso</a></li>
                         <li><a href="mailto:presenteperfeito410@gmail.com" class="hover:text-white">Fale Conosco</a></li>
                     </ul>
                 </div>
