--- a/politica-de-privacidade.html
+++ b/politica-de-privacidade.html
@@ -86,8 +86,8 @@
                     <div>
                         <h3 class="font-bold mb-4">Links Úteis</h3>
                         <ul class="space-y-2 text-sm text-gray-400">
-                            <li><a href="politica-privacidade.html" class="hover:text-white">Política de Privacidade</a></li>
-                            <li><a href="termos-de-uso.html" class="hover:text-white">Termos de Uso</a></li>
+                            <li><a href="/presente-perfeito/politica-de-privacidade.html" class="hover:text-white">Política de Privacidade</a></li>
+                            <li><a href="/presente-perfeito/termos-de-uso.html" class="hover:text-white">Termos de Uso</a></li>
                             <li><a href="mailto:presenteperfeito410@gmail.com" class="hover:text-white">Fale Conosco</a></li>
                         </ul>
                     </div>
