--- a/sugestoes.html
+++ b/sugestoes.html
@@ -641,7 +641,7 @@
     </main>
 
      <!-- Rodapé com Links -->
-     <footer class="bg-black/20 text-white py-8 px-4 mb-16 rounded-lg">
+    <footer class="bg-black/20 text-white py-8 px-4 mb-16 rounded-lg">
         <div class="container mx-auto max-w-3xl">
             <div class="grid grid-cols-2 gap-8 mb-10">
                 <div>
@@ -654,9 +654,9 @@
                 <div>
                     <h3 class="font-bold mb-4">Links Úteis</h3>
                     <ul class="space-y-2 text-sm text-gray-400">
-                        <li><a href="politica-privacidade.html" class="hover:text-white">Política de Privacidade</a></li>
-                        <li><a href="termos-de-uso.html" class="hover:text-white">Termos de Uso</a></li>
-                        <li><a href="presenteperfeito410@gmail.com" class="hover:text-white">Fale Conosco</a></li>
+                        <li><a href="/presente-perfeito/politica-de-privacidade.html" class="hover:text-white">Política de Privacidade</a></li>
+                        <li><a href="/presente-perfeito/termos-de-uso.html" class="hover:text-white">Termos de Uso</a></li>
+                        <li><a href="mailto:presenteperfeito410@gmail.com" class="hover:text-white">Fale Conosco</a></li>
                     </ul>
                 </div>
             </div>
