--- a/termos-de-uso.html
+++ b/termos-de-uso.html
@@ -10,8 +10,17 @@
     <div class="container mx-auto px-4 py-8">
         <!-- Logo -->
         <div class="text-center mb-8">
-            <img src="https://i.ibb.co/y6Z1JGL/Genio-Text-White-PNG-low.png" alt="Gênio dos Presentes Logo" class="w-24 h-auto opacity-75 mx-auto">
+            <a href="/presente-perfeito/">
+                <img src="https://i.ibb.co/y6Z1JGL/Genio-Text-White-PNG-low.png" 
+                    alt="Gênio dos Presentes Logo" 
+                    class="w-24 h-auto opacity-75 mx-auto hover:opacity-100 transition-opacity">
+            </a>
         </div>
+
+        <!-- Botão Voltar -->
+        <a href="/presente-perfeito/" class="fixed top-4 left-4 w-8 h-8 flex items-center justify-center bg-white/10 hover:bg-white/20 rounded-full transition-colors">
+            <span class="text-2xl">←</span>
+        </a>
 
         <!-- Conteúdo -->
         <div class="max-w-3xl mx-auto bg-[#8B1D1D]/50 p-8 rounded-lg shadow-lg">
@@ -57,14 +66,25 @@
             </div>
         </div>
 
-       <!-- Rodapé com Links -->
+        <!-- Botão Voltar Inferior -->
+        <div class="text-center mt-8 mb-8">
+            <a href="/presente-perfeito/" 
+            class="inline-block bg-yellow-400 hover:bg-yellow-500 text-black font-bold py-3 px-8 rounded-lg transition-colors transform hover:scale-105">
+                Voltar para Home
+            </a>
+        </div>
+
+
+       <!-- Rodapé com Links e redirect na logo -->
         <footer class="bg-black/20 text-white py-8 px-4 mb-16 rounded-lg">
             <div class="container mx-auto max-w-3xl">
                 <div class="grid grid-cols-2 gap-8 mb-10">
                     <div>
-                        <img src="https://i.ibb.co/y6Z1JGL/Genio-Text-White-PNG-low.png" 
-                            alt="Gênio dos Presentes Logo" 
-                            class="w-24 h-auto opacity-75" />
+                        <a href="/presente-perfeito/">
+                            <img src="https://i.ibb.co/y6Z1JGL/Genio-Text-White-PNG-low.png" 
+                                alt="Gênio dos Presentes Logo" 
+                                class="w-24 h-auto opacity-75 hover:opacity-100 transition-opacity" />
+                        </a>
                         <h3 class="font-bold mb-4 mt-4">Gênio dos Presentes LTDA®</h3>
                         <p class="text-sm text-gray-400">Buscamos as melhores ofertas para você surpreender quem ama.</p>
                     </div>
