--- a/politica-de-privacidade.html
+++ b/politica-de-privacidade.html
@@ -89,28 +89,33 @@
         </div>
 
 
-        <!-- Rodapé com Links -->
+        <!-- Rodapé com Links e redirect na logo -->
         <footer class="bg-black/20 text-white py-8 px-4 mb-16 rounded-lg">
             <div class="container mx-auto max-w-3xl">
-                <div class="grid grid-cols-2 gap-8 mb-10">
-                    <div>
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mb-10">
+                    <!-- Coluna da Esquerda -->
+                    <div class="flex flex-col items-center md:items-start text-center md:text-left">
                         <a href="/presente-perfeito/">
                             <img src="https://i.ibb.co/y6Z1JGL/Genio-Text-White-PNG-low.png" 
                                 alt="Gênio dos Presentes Logo" 
                                 class="w-24 h-auto opacity-75 hover:opacity-100 transition-opacity" />
                         </a>
-                        <h3 class="font-bold mb-4 mt-4">Gênio dos Presentes LTDA®</h3>
+                        <h3 class="font-bold mb-2">Gênio dos Presentes LTDA®</h3>
                         <p class="text-sm text-gray-400">Buscamos as melhores ofertas para você surpreender quem ama.</p>
                     </div>
-                    <div>
+                    
+                    <!-- Coluna da Direita -->
+                    <div class="flex flex-col items-center md:items-start text-center md:text-left">
                         <h3 class="font-bold mb-4">Links Úteis</h3>
-                        <ul class="space-y-2 text-sm text-gray-400">
-                            <li><a href="/presente-perfeito/politica-de-privacidade.html" class="hover:text-white">Política de Privacidade</a></li>
-                            <li><a href="/presente-perfeito/termos-de-uso.html" class="hover:text-white">Termos de Uso</a></li>
-                            <li><a href="mailto:presenteperfeito410@gmail.com" class="hover:text-white">Fale Conosco</a></li>
+                        <ul class="space-y-3 text-sm text-gray-400">
+                            <li><a href="/presente-perfeito/politica-de-privacidade.html" class="hover:text-white transition-colors">Política de Privacidade</a></li>
+                            <li><a href="/presente-perfeito/termos-de-uso.html" class="hover:text-white transition-colors">Termos de Uso</a></li>
+                            <li><a href="mailto:presenteperfeito410@gmail.com" class="hover:text-white transition-colors">Fale Conosco</a></li>
                         </ul>
                     </div>
                 </div>
+                
+                <!-- Copyright -->
                 <div class="text-center text-sm text-gray-400 pt-4 border-t border-gray-700">
                     © 2023 Presente Perfeito. Todos os direitos reservados.
                 </div>
